# todoapp

./: .dockerignore  .env.example  .env.production.example  .gitignore  AUTHENTICATION_FIX.md  CLAUDE.md  DEMO_READY.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DOCKER_PYTHON311_FIX.md  FINAL_STATUS.md  HACKATHON_DEMO_READY.md  IMPLEMENTATION_STATUS.md  PHASE3_DATABASE_INTEGRATION_COMPLETE.md  PHASE3_IMPLEMENTATION_COMPLETE.md  PHASE3_IMPLEMENTATION_SUMMARY.md  QUICK_DEPLOY.md  QUICK_START.md  README.md  RUNNING.md  VERCEL_DEPLOYMENT_STEPS.md  VERCEL_NEON_DEPLOYMENT.md  VERIFICATION_CHECKLIST.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.claude/agents/: agent-creator.md  constitution-spec-writer.md  spec-validator.md
.spec-kit/: config.yaml
.specify/agents/: code-gen-agent.yaml  doc-writer-agent.yaml  (+3 more)
backend/: .env.example  Dockerfile  README.md  chat_standalone.py  chat_with_tools.py  demo_chatbot.py  install-deps.sh  main.py  main.py.backup  main_chat_only.py  pyproject.toml  requirements.txt  setup-and-run.sh
backend/alembic/: env.py
backend/alembic/versions/: 2b75041faad1_create_tasks_table_with_soft_delete_.py  593e12a58a3_add_conversations_and_messages_tables.py  d5f30417d351_create_users_table_for_authentication.py
backend/mcp_tools/: __init__.py  task_tools.py  task_tools_db.py
backend/src/: config.py  database.py
backend/src/api/: __init__.py  auth.py  chat.py  chat_db.py  health.py  tasks.py
backend/src/middleware/: __init__.py  auth.py
backend/src/models/: __init__.py  conversation.py  message.py  task.py  user.py
backend/src/services/: __init__.py  agent_service.py  auth_service.py  conversation_service.py  task_service.py
frontend/: .dockerignore  .env.local.example  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
specs/: overview.md
src/: __init__.py  main.py
tests/: __init__.py  test_cli.py  test_integration.py  test_task.py  test_task_manager.py
(+77 files in other folders)
