[project]
name = "todo-app"
version = "0.1.0"
description = "In-memory console-based todo application"
requires-python = ">=3.8"
authors = [
    {name = "Mirza Mohsin Baig"}
]
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
